Modified width values to prevent form layout breaking

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,6 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1.2em;
   text-align: center;
+  margin: auto;
+  width: 20em;
 }
