--- a/src/components/Dice.css
+++ b/src/components/Dice.css
@@ -4,7 +4,6 @@
   padding: 1em;
   text-align: left;
   margin: 2em auto;
-  width: 20vw;
 }
 
 form {
